--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -1,19 +1,21 @@
 <% include start %>
-<article>
-	<% include ./partials/global-header %>
-	<section class="section white section-normal has-top">
-		<div class="decor-top">
-			<% include ./partials/top-triangle-angle %>
-		</div>
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<% include ./partials/terms %>
+<div class="terms-and-conditions">
+	<article>
+		<% include ./partials/global-header %>
+		<section class="section white section-normal has-top">
+			<div class="decor-top">
+				<% include ./partials/top-triangle-angle %>
+			</div>
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<% include ./partials/terms %>
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-</article>
+		</section>
+	</article>
+</div>
 <% include end %>
