--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -1,15 +1,17 @@
 <% include start %>
-<article itemscope itemtype="https://schema.org/PaymentChargeSpecification">
-	<% include ./partials/global-header %>
-	<section class="section white section-normal has-top">
-		<div class="decor-top">
-			<% include ./partials/top-triangle-angle %>
-		</div>
-		<div class="background-media"></div>
-		<div class="background-overlay"></div>
-		<div class="container">
-			<% include ./partials/pricing-table %>
-		</div>
-	</section>
-</article>
+<div class="pricing">
+	<article itemscope itemtype="https://schema.org/PaymentChargeSpecification">
+		<% include ./partials/global-header %>
+		<section class="section white section-normal has-top">
+			<div class="decor-top">
+				<% include ./partials/top-triangle-angle %>
+			</div>
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<% include ./partials/pricing-table %>
+			</div>
+		</section>
+	</article>
+</div>
 <% include end %>
