New Screenshots added

--- a/views/features.ejs
+++ b/views/features.ejs
@@ -59,7 +59,7 @@
 							</header>
 						</div>
 						<div id="feature_2_img" class="col-md-6 features-text-left">
-							<img src="/images/fit-to-powerpoint-live.png" itemprop="screenshot" alt="Presentation ready roadmaps with our roadmapping software">
+							<img src="/images/fit-to-powerpoint.png" itemprop="screenshot" alt="Presentation ready roadmaps with our roadmapping software">
 						</div>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 							</header>
 						</div>
 						<div id="feature_6_img" class="col-md-6 features-text-left">
-							<img src="/images/a4-legal-live.png" itemprop="screenshot" alt="Print roadmaps to A4 and Legal">
+							<img src="/images/print-to-a4-legal.png" itemprop="screenshot" alt="Print roadmaps to A4 and Legal">
 						</div>
 					</div>
 				</div>
