--- a/views/style-guide.ejs
+++ b/views/style-guide.ejs
@@ -66,6 +66,7 @@
 
               <h4>Fonts</h4>
 
+              <button class="clip_button my_clip_button darkest" data-clipboard-text="#2F3134">Darkest Font</button>
               <button class="clip_button my_clip_button dark_white" data-clipboard-text="#3B3E41">Dark Font</button>
               <button class="clip_button my_clip_button white" data-clipboard-text="#FFFFFF">Light Font</button>
               <button class="clip_button my_clip_button lightest" data-clipboard-text="#E2E2E6">Lightest</button>
