Blog Title Update

--- a/views/blog/fit-to-powerpoint-and-download-to-html.ejs
+++ b/views/blog/fit-to-powerpoint-and-download-to-html.ejs
@@ -13,7 +13,7 @@
 	<img src="/images/blog/sort-table.png">
 </div>
 
-<h2>Prioritize on Table View</h2>
+<h2>Publish and Download an HTML Roadmap</h2>
 
 <p>Order matters. Rows can now be drag and dropped in the table view so you can prioritize the list in a meaningful way.</p>
 <div class="text-center">
