Writing the Blog V1

--- a/views/blog/fit-to-powerpoint-and-download-to-html.ejs
+++ b/views/blog/fit-to-powerpoint-and-download-to-html.ejs
@@ -1,29 +1,37 @@
 <% include blogStart %>
 
-<h2>Fit and download for PowerPoint and Keynote</h2>
+<h2>Fit and Download for PowerPoint and Keynote</h2>
 
-<p>Product managers are challenged by balancing content and design on their roadmap slides, especially when they’re trying to condense it onto a presentation slide. Both PowerPoint and Keynote slides typically have the dimensions of 4:3 or 16:9, depending on which is selected. And quite often, depending on the projector or monitor being used, there are corresponding resolutions that work best. For example, if you select 4:3, the most common resolutions (as found here), are 800 x 600, 1024 x 768, 1280 x 1024. </p>
+<p>Product managers are challenged by balancing content and design on their roadmap slides, especially when they’re trying to condense it onto a presentation slide. Both PowerPoint and Keynote slides typically have the dimensions of 4:3 or 16:9. Quite often, depending on the projector or monitor being used, there are corresponding resolutions that work best. For example, if you select 4:3, the most common resolutions (as found <a href= "http://en.wikipedia.org/wiki/Display_resolution">here</a>), are 800 x 600, 1024 x 768, 1280 x 1024. </p>
 
-<p>First click on the export icon in the top right of the Timeline View. (At the moment we only support the Timeline View). </p>
+<p>First click on the export icon in the top right of the Timeline View.</p>
 <p>Make sure Format is set to PNG. </p>
+
+<div class="text-center">
+	<img src="/images/blog/sort-table.png">
+</div>
+
 <p>From here, we recommend leaving orientation landscape, setting dimensions at 4:3, and the resolution at 1024 xx 768. This is the most common use case. Regardless of content density, we aim to balance the sizing of elements so that your design will appeal to the audience. </p> 
 
 <p>Download the PNG and drop it in Powerpoint or Keynote</p>
+
 <div class="text-center">
 	<img src="/images/blog/sort-table.png">
 </div>
 
 <h2>Publish and Download an HTML Roadmap</h2>
 
-<p>Order matters. Rows can now be drag and dropped in the table view so you can prioritize the list in a meaningful way.</p>
+<p>When sharing your roadmap, stakeholders need the ability to drill down and get more information. Moving forward all published roadmaps will be in an HTML format whereby users can drill down roadmap items to see more information. </p>
+<p>Users can also download their roadmap in HTML. Here’s how. Click on the export icon. </p>
+
+<div class="text-center">
+	<img src="/images/blog/prioritize-table.png">
+</div>
+=
+<p>Set <b>format</b> to HTML and pick your preferred dimensions and resolution. </p>
+
 <div class="text-center">
 	<img src="/images/blog/prioritize-table.png">
 </div>
 
-<h2>Adjustable Date Formats on Timeline View</h2>
-
-<p>Users can now select time periods via a drop down and change them between months, quarters, halves and fiscal years. We’ve also added the respective year to each time period to make them distinguishable from one another.</p>
-<div class="text-center">
-	<img src="/images/blog/adjustable-dates.png">
-</div>
-<% include blogEnd %>
+<p>Download and share. </p>
