Minor changes for Latif's blog post

--- a/views/blog/fit-to-powerpoint-and-download-to-html.ejs
+++ b/views/blog/fit-to-powerpoint-and-download-to-html.ejs
@@ -27,7 +27,7 @@
 <div class="text-center">
 	<img src="/images/blog/prioritize-table.png">
 </div>
-=
+
 <p>Set <b>format</b> to HTML and pick your preferred dimensions and resolution. </p>
 
 <div class="text-center">
@@ -35,3 +35,5 @@
 </div>
 
 <p>Download and share. </p>
+
+<% include blogEnd %>
