--- a/views/blog/fit-to-powerpoint-and-download-to-html.ejs
+++ b/views/blog/fit-to-powerpoint-and-download-to-html.ejs
@@ -5,10 +5,10 @@
 <p>Product managers are challenged by balancing content and design on their roadmap slides, especially when they’re trying to condense it onto a presentation slide. Both PowerPoint and Keynote slides typically have the dimensions of 4:3 or 16:9. Quite often, depending on the projector or monitor being used, there are corresponding resolutions that work best. For example, if you select 4:3, the most common resolutions (as found <a href= "http://en.wikipedia.org/wiki/Display_resolution">here</a>), are 800 x 600, 1024 x 768, 1280 x 1024. </p>
 
 <p>First click on the export icon in the top right of the Timeline View.</p>
-<p>Make sure Format is set to PNG. </p>
+<p>Make sure <b>format</b> is set to PNG. </p>
 
 <div class="text-center">
-	<img src="/images/blog/sort-table.png">
+	<img src="/images/blog/format-to-png.png">
 </div>
 
 <p>From here, we recommend leaving orientation landscape, setting dimensions at 4:3, and the resolution at 1024 xx 768. This is the most common use case. Regardless of content density, we aim to balance the sizing of elements so that your design will appeal to the audience. </p> 
