New picture and link

--- a/views/features.ejs
+++ b/views/features.ejs
@@ -78,7 +78,7 @@
 							</header>
 						</div>
 						<div id="feature_3_img" class="col-md-6 features-right features-text-right">
-							<img src="/images/publish-url-live.png" itemprop="screenshot" alt="Share product roadmaps with audience">
+							<img src="/images/publish-to-url.png" itemprop="screenshot" alt="Share product roadmaps with audience">
 						</div>
 					</div>
 				</div>
