--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,7 @@
         <!--<li><a title="Pricing" href="/pricing">Pricing</a></li>-->
         <li><a title="Blog" href="/blog">Blog</a></li>
         <li><a title="Company" href="/company">Company</a></li>
+         <li><a title="Company" href="https://app.roadmunk.com/login/#/signup">Sign Up</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
