--- a/views/blog/fit-to-powerpoint-and-download-to-html.ejs
+++ b/views/blog/fit-to-powerpoint-and-download-to-html.ejs
@@ -1,39 +1,52 @@
 <% include blogStart %>
 
 <h2>Fit and Download for PowerPoint and Keynote</h2>
+<br>
+<p>Product managers are challenged by balancing content and design on their roadmap slides. It becomes especially difficult when content needs to be modified and the design needs reformatting. Roadmunk's "Fit to PowerPoint" solves this problem.</p>
 
-<p>Product managers are challenged by balancing content and design on their roadmap slides, especially when they’re trying to condense it onto a presentation slide. Both PowerPoint and Keynote slides typically have the dimensions of 4:3 or 16:9. Quite often, depending on the projector or monitor being used, there are corresponding resolutions that work best. For example, if you select 4:3, the most common resolutions (as found <a href= "http://en.wikipedia.org/wiki/Display_resolution">here</a>), are 800 x 600, 1024 x 768, 1280 x 1024. </p>
+<p>PowerPoint and Keynote slides typically have the dimensions of 4:3 or 16:9. Quite often, depending on the projector or monitor being used, there are corresponding resolutions that work best. For example, if you dimensions (ie. aspect ratio) of 4:3, the most common resolutions (as found <a href= "http://en.wikipedia.org/wiki/Display_resolution">here</a>), are 800 x 600, 1024 x 768, 1280 x 1024. </p>
+<br>
+<p>To try this feature out, first click on the <b>export</b> icon in the top right of the Timeline View.</p>
 
-<p>First click on the export icon in the top right of the Timeline View.</p>
+<div class="text-center">
+	<img src="/images/blog/export-icon.png">
+</div>
+<br>
 <p>Make sure <b>format</b> is set to PNG. </p>
 
-<div class="text-center">
-	<img src="/images/blog/format-to-png.png">
-</div>
-
-<p>From here, we recommend leaving orientation landscape, setting dimensions at 4:3, and the resolution at 1024 xx 768. This is the most common use case. Regardless of content density, we aim to balance the sizing of elements so that your design will appeal to the audience. </p> 
-
-<p>Download the PNG and drop it in Powerpoint or Keynote</p>
+<p>From here, we recommend leaving orientation landscape, setting the dimensions to <b>4:3</b>, and the resolution at <b>1024 x 768</b>. This is the most common use case; however, feel free to try different variations. Regardless of content density, we aim to balance the sizing of elements so that your design will appeal to the audience. </p> 
 
 <div class="text-center">
-	<img src="/images/blog/sort-table.png">
+	<img src="/images/blog/fit-to-powerpoint-final.png">
+</div>
+<br>
+<p><b>Download</b> the PNG,<b> drag and drop</b> it into Powerpoint or Keynote and you're presentation ready!</p>
+
+<div class="text-center">
+	<img src="/images/blog/download-and-ppt.png">
 </div>
 
+<br>
+</br>
 <h2>Publish and Download an HTML Roadmap</h2>
-
+<br>
 <p>When sharing your roadmap, stakeholders need the ability to drill down and get more information. Moving forward all published roadmaps will be in an HTML format whereby users can drill down roadmap items to see more information. </p>
 <p>Users can also download their roadmap in HTML. Here’s how. Click on the export icon. </p>
 
 <div class="text-center">
-	<img src="/images/blog/prioritize-table.png">
+	<img src="/images/blog/export-icon.png">
 </div>
 
-<p>Set <b>format</b> to HTML and pick your preferred dimensions and resolution. </p>
+<p>Set <b>format</b> to HTML. If you're on the Timeline view and pick your preferred dimensions and resolution. Download the HTML file and you're ready to share with stakeholders!</p>
 
 <div class="text-center">
-	<img src="/images/blog/prioritize-table.png">
+	<img src="/images/blog/download-to-html.png">
 </div>
 
-<p>Download and share. </p>
+<br>
+<p>Here is a preview of the HTML roadmap. Clicking on roadmaps items provide users with greater details about the roadmap.</p>
 
+<div class="text-center">
+	<img src="/images/blog/view-in-browser.png">
+</div>
 <% include blogEnd %>
