Updated META and added subscribe email feature

--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -139,6 +139,17 @@ a {
             content : "Start 14 Day Free Trial";
         }
     }
+    &.subscribe{
+        width      : 150px;
+        padding: 9px 0;
+        background : @table-blue;
+        &:hover {
+            background : darken(@table-blue, 10%);
+        }
+        &:before {
+            content : "Subscribe";
+        }
+    }
     &.small-cta {
         width: 275px;
     }
