--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -41,6 +41,12 @@
     color: @admin-green;
   }*/
 
+  input.subscribe {
+    width: 65%;
+    display : inline-block;
+    margin-right : 15px;
+  }
+
   .home-svg {
     margin-top: 35px;
     /*&:hover {
