--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -15,7 +15,7 @@
 
 <% } else if (content == "home") { %>
 
-	<!--<script src="/javascripts/home.js"></script>-->
+	<script src="/javascripts/home.js"></script>
 
 <% } else if (content == "pricing") { %>
 
