Updated blog image

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -293,7 +293,7 @@
 			<div class="container">
 				<header class="section-header text-center underline">
 					<h1 class="headline text-medium hairline">Interested in Roadmunk?</h1>
-					<p class="get-smaller">Sign up below to get email updates of all our new features</p>
+					<p class="get-smaller">Sign up below to get email updates of all of our new features</p>
 				</header>
 				<div class="row">
 					<div class="col-sm-6 center">
