--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -13,6 +13,10 @@
 
 	<!--<script src="/javascripts/features.js"></script>-->
 
+<% } else if (content == "blog") { %>
+
+	<script src="/javascripts/blog.js"></script>
+
 <% } else if (content == "home") { %>
 
 	<script src="/javascripts/home.js"></script>
