--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -9,6 +9,30 @@
 @extra-color       : @light-font;
 @post-bg-color     : @steel-darkest;
 
+.categories {
+    li {
+        display: inline-block;
+        text-transform: uppercase;
+        color: @table-blue;
+        font-size : 16px;
+        font-weight: 600;
+        margin: 0 5px;
+        cursor : pointer;
+
+        &:hover {
+            color : @table-dark-blue;
+        }
+
+        &:first-child {
+            margin-left : 0;
+        }
+
+        &.selected {
+            color : @table-dark-blue;
+        }
+    }
+}
+
 .grid-post {
 
     background  : @post-bg-color;
