--- a/public/stylesheets/features.less
+++ b/public/stylesheets/features.less
@@ -1,6 +1,9 @@
+
+@border-color : @steel-lightest;
+
 .features-page .container {
 	img {
-		border: 1px solid @steel-lightest;
+		border: 1px solid @border-color;
 		opacity: 0.95;
 		.border-radius(6px);
 	}
